# dotsong

./: .deepsource.toml  .env.example  README.md  components.json  package.json  vite.config.js
.github/: FUNDING.yml
.github/scripts/: release-links.sh
.github/workflows/: auto-tag.yml  build.yml  release.yml
src/: app.css
src-tauri/: Cargo.toml  build.rs  listen.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  http.rs  lastfm_auth.rs  lib.rs  main.rs  media_center.rs  scrobblers.rs
src-tauri/src/media_center/: mod.rs  source.rs
src-tauri/src/models/: creditsfm.rs  deezer_api.rs  listenbrainz.rs  mod.rs
src/lib/components/: ToggleOption.svelte
src/lib/components/icons/: lastfm.svelte  librefm.svelte  listenbrainz.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/empty/: empty-title.svelte
src/routes/: +layout.svelte  +page.svelte
