[package]
name = "dotsong"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dotsong_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nowhear = "0.2.0"
media-remote = {version = "0.4.1", default-features = false}
parking_lot = "0.12.5"
image = "0.25.10"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.1"
tray-icon = "0.24.1"
discord-presence = "3.2.0"
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.13.4", features = ["json"] }
chrono = "0.4.45"
percent-encoding = "2.3.2"
async-trait = "0.1.86"
moka = { version = "0.12.15", features = ["future"] }
regex = "1.12.4"
dirs = "6.0.0"
futures = "0.3.32"
last-fm-rs = "20251214.0.2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
