[package]
name = "dotsong"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dotsong_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15.7"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12.5"
image = "0.25.10"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.1"
tray-icon = "0.24.1"
discord-presence = "3.2.0"
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
chrono = "0.4.45"
percent-encoding = "2.3.2"
async-trait = "0.1.86"
moka = { version = "0.12.15", features = ["future"] }
regex = "1.12.4"
dirs = "6.0.0"
futures = "0.3.32"
last-fm-rs = { git = "https://github.com/thrzl/last-fm-rs", version = "20260120.0.0" }
semver = { version = "1.0.28", features = ["serde"] }
arc-swap = "1.9.1"
bytes = "1.12.0"

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = { git = "https://github.com/nohackjustnoobb/media-remote", version = "0.5.2" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
nowhear = "0.2.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
